add example and format code.

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable(info InfoTest.cc)
 target_link_libraries(info Log)
+add_executable(example example.cc)
+target_link_libraries(example Log)
