--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,4 +1,3 @@
-add_executable(info InfoTest.cc)
-target_link_libraries(info Log)
-add_executable(example example.cc)
-target_link_libraries(example Log)
+add_executable(SingleHeaderTest SingleHeaderTest.cc)
+
+target_include_directories(SingleHeaderTest PRIVATE ${CMAKE_SOURCE_DIR}/release)
